@@ -1,8 +1,8 @@
-// "Fix all '`InputStream' and 'OutputStream' can be constructed using 'Files' methods' problems in file" "true"
+// "Fix all ''InputStream' and 'OutputStream' can be constructed using 'Files' methods' problems in file" "true"
 import java.io.*;
 import java.nio.*;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 
 class Foo {
   void test(File file, String str) {
@@ -17,7 +17,7 @@ class Foo {
       throw new RuntimeException(e);
     }
 
-    Path strPath = Path.of(str);
+    Path strPath = Paths.get(str);
     try (InputStream is = Files.newInputStream(strPath)) {
     } catch (IOException e) {
       throw new RuntimeException(e);
