@@ -1,7 +1,8 @@
-// "Fix all '`InputStream' and 'OutputStream' can be constructed using 'Files' methods' problems in file" "true"
+// "Fix all ''InputStream' and 'OutputStream' can be constructed using 'Files' methods' problems in file" "true"
 import java.io.*;
+import java.nio.*;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 
 class Foo {
   void test(File file, String str) {
@@ -15,12 +16,12 @@ class Foo {
       throw new RuntimeException(e);
     }
 
-    try (InputStream is = Files.newInputStream(Path.of(str))) {
+    try (InputStream is = Files.newInputStream(Paths.get(str))) {
     } catch (IOException e) {
       throw new RuntimeException(e);
     }
 
-    try (InputStream is = Files.newInputStream(Path.of(str))) {
+    try (InputStream is = Files.newInputStream(Paths.get(str))) {
     } catch (IOException e) {
       throw new RuntimeException(e);
     }
