@@ -1,8 +1,8 @@
-// "Fix all '`InputStream' and 'OutputStream' can be constructed using 'Files' methods' problems in file" "true"
+// "Fix all ''InputStream' and 'OutputStream' can be constructed using 'Files' methods' problems in file" "true"
 import java.io.*;
 import java.nio.*;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 
 class Foo {
   void test(File file, String str) {
@@ -12,21 +12,21 @@ class Foo {
       throw new RuntimeException(e);
     }
     
-    filePath = Path.of("other");
+    filePath = Paths.get("other");
 
     try (InputStream is = Files.newInputStream(file.toPath())) {
     } catch (IOException e) {
       throw new RuntimeException(e);
     }
 
-    Path strPath = Path.of(str);
+    Path strPath = Paths.get(str);
     for (int i = 0; i < 10; i++) {
-      try (InputStream is = Files.newInputStream(Path.of(str))){
+      try (InputStream is = Files.newInputStream(Paths.get(str))){
       } catch(IOException e){
         throw new RuntimeException(e);
       }
 
-      strPath = Path.of("foo");
+      strPath = Paths.get("foo");
       try (InputStream is = Files.newInputStream(strPath)) {
       }
       catch (IOException e) {
