@@ -1,5 +1,6 @@
-// "Fix all '`InputStream' and 'OutputStream' can be constructed using 'Files' methods' problems in file" "true"
+// "Fix all ''InputStream' and 'OutputStream' can be constructed using 'Files' methods' problems in file" "true"
 import java.io.*;
+import java.nio.*;
 
 class Foo {
   void test(File file, String str) {
@@ -18,7 +19,7 @@ class Foo {
       throw new RuntimeException(e);
     }
 
-    try (InputStream is = Files.newInputStream(Path.of(str))) {
+    try (InputStream is = Files.newInputStream(Paths.get(str))) {
     } catch (IOException e) {
       throw new RuntimeException(e);
     }
