@@ -1,4 +1,4 @@
-// "Fix all '`InputStream' and 'OutputStream' can be constructed using 'Files' methods' problems in file" "true"
+// "Fix all ''InputStream' and 'OutputStream' can be constructed using 'Files' methods' problems in file" "true"
 import java.io.*;
 import java.nio.*;
 
@@ -10,21 +10,21 @@ class Foo {
       throw new RuntimeException(e);
     }
     
-    filePath = Path.of("other");
+    filePath = Paths.get("other");
 
     try (InputStream is = new FileInputStream(file)) {
     } catch (IOException e) {
       throw new RuntimeException(e);
     }
 
-    Path strPath = Path.of(str);
+    Path strPath = Paths.get(str);
     for (int i = 0; i < 10; i++) {
       try (InputStream is = new FileInp<caret>utStream(str)){
       } catch(IOException e){
         throw new RuntimeException(e);
       }
 
-      strPath = Path.of("foo");
+      strPath = Paths.get("foo");
       try (InputStream is = Files.newInputStream(strPath)) {
       }
       catch (IOException e) {
