@@ -1,9 +1,10 @@
 // "Replace with 'Files.newOutputStream'" "true"
 import java.io.*;
+import java.nio.*;
 
 class Foo {
   void test(String str, boolean b) {
-    try (OutputStream os = (b ? (Files.newOutputStream(Path.of("foo"))) : (new FileO<caret>utputStream(str)))) {
+    try (OutputStream os = (b ? (Files.newOutputStream(Paths.get("foo"))) : (new FileO<caret>utputStream(str)))) {
     } catch (IOException e) {}
   }
 }
